@@ -27,9 +27,33 @@
 			$time = ' 00:00.00';
 			$this->assertEquals($future.$time, $after->toDateTime());
 			$this->assertEquals($past.$time, $before->toDateTime());
-			
+		}
+		
+		public function testInvalidTimestamp()
+		{
 			try {
 				new Timestamp('2007-0-0');
+				$this->fail();
+			} catch (WrongArgumentException $e) {
+				/* pass */
+			}
+			
+			try {
+				new Timestamp('2007-00-00');
+				$this->fail();
+			} catch (WrongArgumentException $e) {
+				/* pass */
+			}
+			
+			try {
+				new Timestamp('2007-01-00');
+				$this->fail();
+			} catch (WrongArgumentException $e) {
+				/* pass */
+			}
+			
+			try {
+				new Timestamp('2007-00-01');
 				$this->fail();
 			} catch (WrongArgumentException $e) {
 				/* pass */
@@ -47,7 +71,7 @@
 			}
 		}
 		
-		public function testTimestampNow() 
+		public function testTimestampNow()
 		{
 			try {
 				Timestamp::create('now');
